<resources>
    <string name="app_name">Photos</string>
    <string name="album_name">Album Name</string>
    <string name="add_album">Add Album</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="album">Album</string>
    <string name="rename_album">Rename Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="search_photos">Search Photos</string>
    <string name="add_tag">Add Tag</string>
    <string name="move_photo">Move Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="peopleParam">People: %1$s</string>
    <string name="locationsParam">Location: %1$s</string>
    <string name="people">People:</string>
    <string name="locations">Location:</string>
    <string name="tag_value">Tag Value</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="slideshow">Slideshow</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="tag_tip">Tap a tag to remove it</string>
</resources>