<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ViewAlbum"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/slideshowButton"
        android:title="@string/slideshow"
        android:onClick="startSlideshow"
        android:icon="@drawable/baseline_image_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/album_rename"
        android:title="@string/rename_album"
        android:onClick="renameAlbum"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/album_delete"
        android:title="@string/delete_album"
        android:onClick="deleteAlbum"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/add_photo"
        android:title="@string/add_photo"
        android:onClick="addPhoto"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="ifRoom" />
</menu>