<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/photoToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:theme="@style/ToolbarColoredBackArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/largeImageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoToolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagTip"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tag_tip"
        app:layout_constraintTop_toBottomOf="@id/largeImageView"
        />

    <TextView
        android:id="@+id/peopleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/people"
        app:layout_constraintTop_toBottomOf="@id/tagTip" />

    <ListView
        android:id="@+id/personTagsList"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/peopleText"
        >

    </ListView>

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/locations"
        app:layout_constraintTop_toBottomOf="@id/personTagsList" />

    <ListView
        android:id="@+id/locationTagsList"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        />


</androidx.constraintlayout.widget.ConstraintLayout>